# SocialMediaRag

./: .gitignore  README.md  README_LOCAL.md  push_all.bat  render.yaml
backend/: .env  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
backend/app/: main.py
backend/app/data/: sample_docs.json
backend/app/models/: auth.py
backend/app/routes/: __init__.py  auth.py  auth_deps.py  health.py  ingest.py  search.py  social.py  trends.py
backend/app/services/: rag.py  reddit.py  twitter.py  vectorstore.py  youtube.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: ResultCard.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Search.jsx
frontend/src/services/: api.js
