[tool.poetry.dependencies]
# already present:
fastapi = "^0.116.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
pyjwt = "^2.8.0"
requests = "^2.32.4"
python-dotenv = "^1.0.1"
python = "^3.11"


# add these:
sqlalchemy = "^2.0.31"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
praw = "^7.7.1"
sentence-transformers = "^3.0.1"
chromadb = "^0.5.5"
numpy = "^1.26.0"
scikit-learn = "^1.5.1"
ragas = "^0.1.11"
