[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for SocialMediaRAG"
authors = ["Ayush <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
python-dotenv = "^1.1.1"
requests = "^2.32.4"
PyJWT = "^2.9.0"

# RAG stack (optional but you added these):
sqlalchemy = "^2.0.43"
beautifulsoup4 = "^4.13.4"
feedparser = "^6.0.11"
praw = "^7.8.1"
sentence-transformers = "^5.1.0"
chromadb = "^1.0.17"
numpy = "^2.3.2"
scikit-learn = "^1.7.1"
ragas = "^0.3.1"

[tool.poetry.group.dev.dependencies]
# add dev-only deps here if you want (e.g., pytest)

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

